[package]
name = "rust-os-dev-example"
version = "0.1.0"
edition = "2021"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[unstable]
build-std = ["core", "compiler_builtins"]
